--- a/BFF/rest/src/main/resources/application.properties
+++ b/BFF/rest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BFF
 
-server.port=8083
+server.port=8090
 
 #Data Source Properties
 #spring.datasource.driverClassName = org.postgresql.Driver
@@ -21,3 +21,5 @@ logging.level.blog = INFO
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
+spring.boot.admin.client.url=http://localhost:8099/api/v1/admin
