--- a/BFF/persistence/pom.xml
+++ b/BFF/persistence/pom.xml
@@ -12,6 +12,19 @@
     <groupId>com.tinqinacademy.bff.persistence</groupId>
     <artifactId>persistence</artifactId>
     <version>${revision}</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
