--- a/BFF/api/pom.xml
+++ b/BFF/api/pom.xml
@@ -18,6 +18,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.14</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
