[BFF-13] Extracting User Details from jwt

--- a/BFF/rest/src/main/resources/application.properties
+++ b/BFF/rest/src/main/resources/application.properties
@@ -2,28 +2,9 @@ spring.application.name=BFF
 
 server.port=8090
 
-#Data Source Properties
-#spring.datasource.driverClassName = org.postgresql.Driver
-#spring.datasource.url = jdbc:postgresql://localhost:5432/bff?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=rostislav
-#spring.datasource.password=rostislav11
-
-#JPA Properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.format_sql = TRUE
-#spring.jpa.hibernate.ddl-auto = update
-
-###Logging Levels
-# Disable the default loggers
-#logging.level.org = INFO
-#logging.level.blog = INFO
-
-#Show SQL executed with parameter bindings
-#logging.level.org.hibernate.SQL = DEBUG
-#logging.level.org.hibernate.type.descriptor = TRACE
 
 spring.boot.admin.client.url=http://localhost:8099/api/v1/admin
-comment.client.url=http://localhost:8086
-hotel.client.url=http://localhost:8080
-auth.client.url=http://localhost:8070
+comment.client.url=http://comments-service:8086
+hotel.client.url=http://hotel-service:8080
+auth.client.url=http://auth-service:8070
 
