--- a/BFF/Dockerfile
+++ b/BFF/Dockerfile
@@ -1,5 +1,5 @@
 FROM amazoncorretto:21-alpine
 
-COPY rest/target/*.jar /app.jar
+COPY rest/target/rest-0.0.1-SNAPSHOT.jar /bff.jar
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "/bff.jar"]
